<resources>
    <string name="app_name">SportActivities</string>
    <string name="google_place_api" translatable="false">AIzaSyDcUNyNokjBpxV9EzO6FdmL_6EvHMkYANQ</string>
    <string name="title_activity_maps_activitys">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login</string>
    <string name="create_account">Create Account</string>

    <!-- DAVID BEER -->
    <string name="empty_spots">Empty spots</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="message">Message</string>
    <string name="x">X</string>


    <!-- ROBIN TAPPER -->
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_email">Enter email..</string>
    <string name="enter_email_password">Please enter your email and password</string>
    <string name="wrong_email_password">Wrong email or password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="not_registered">This email is not registered</string>
    <string name="verify_email">Please verify your email</string>

    <!-- Elias -->
    <string name="join">JOIN</string>
    <string name="spots_text">Empty spots left:</string>

    <string name="hint_event_name">Event name</string>
    <string name="hint_description">Description</string>
    <string name="hint_location">Location</string>
    <string name="hint_Date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_how_many_people">How many people?</string>
    <string name="activity">Activity</string>
    <string name="edit_activity">Edit activity</string>
    <string name="attending">Attending</string>
    <string name="save">Save</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="no_messages_to_show">No messages to show!</string>
    <string name="remove_activity_question">Are you sure you want to remove the activity</string>
    <string name="remove_activity">Remove activity</string>
    <string name="new_activity">New activity</string>
    <string name="not_valid_time">Selected time is not valid!</string>
    <string name="need_name">You need a name!</string>
    <string name="activities">Activities</string>
    <string name="joined_event_text">You joined the event!</string>
    <string name="logging_in">Logging in...</string>
    <string name="logging_in_user">Logging in user</string>
    <string name="please_verify_email">Please verify email</string>
    <string name="could_not_post">Could not post message, try again!</string>
    <string name="email_invalid">Email invalid</string>
    <string name="required">Required</string>
    <string name="password_no_match">Password does not match</string>
    <string name="invalid_address">Invalid address</string>
    <string name="add_info">Add some information</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="choose_number_people">Choose how many people</string>
    <string name="failed_to_attend">Failed to attend event, try again later!</string>
    <string name="left_event">You have now left the event!</string>
    <string name="could_not_remove_activity">Failed to remove activity. Try again!</string>
    <string name="something_went_wrong">Something went wrong</string>

</resources>
