<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.containers.DetailContainerActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toTopOf="@+id/container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@drawable/nav_indicator_color"
            app:tabIconTint="@drawable/nav_indicator_color"
            app:tabTextColor="@drawable/nav_indicator_color">

            <android.support.design.widget.TabItem
                android:id="@+id/activity_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity"
                android:icon="@drawable/ic_local_activity" />

            <android.support.design.widget.TabItem
                android:id="@+id/message_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:icon="@drawable/ic_message" />

            <android.support.design.widget.TabItem
                android:id="@+id/map_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:icon="@drawable/ic_map"/>

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>


    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>